[gd_scene load_steps=11 format=3 uid="uid://bxclyrhd3tmjj"]

[ext_resource type="Texture2D" uid="uid://bkiy038mx08tg" path="res://assets/sorter.png" id="1_0c2qj"]
[ext_resource type="Script" uid="uid://dxc5brfp00lyk" path="res://scenes/elements/sorter.gd" id="2_0c2qj"]
[ext_resource type="Texture2D" uid="uid://b6otdh4ob7vwl" path="res://assets/connector_out_top.png" id="3_tqxhs"]
[ext_resource type="Texture2D" uid="uid://cj2int62fmopv" path="res://assets/connector_out_bottom.png" id="4_ekvnf"]
[ext_resource type="Texture2D" uid="uid://cev7rgbpe45rw" path="res://assets/connector_out_right.png" id="5_yc0a2"]
[ext_resource type="Texture2D" uid="uid://xxaogvi436si" path="res://assets/connector_out_left.png" id="6_7td3e"]
[ext_resource type="Texture2D" uid="uid://qscdh7fqb6fr" path="res://assets/connector_in_top.png" id="7_xbmrt"]
[ext_resource type="Texture2D" uid="uid://dduu3uamn8c6i" path="res://assets/connector_in_bottom.png" id="8_3fhu7"]
[ext_resource type="Texture2D" uid="uid://00u7w0e4qk7" path="res://assets/connector_in_right.png" id="9_ej56k"]
[ext_resource type="Texture2D" uid="uid://chaiohvwmfrh2" path="res://assets/connector_in_left.png" id="10_c60qg"]

[node name="sorter" type="TextureRect" node_paths=PackedStringArray("resource_delete_button", "delete_button")]
custom_minimum_size = Vector2(80, 80)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0c2qj")
expand_mode = 1
stretch_mode = 5
script = ExtResource("2_0c2qj")
resource_delete_button = NodePath("resource_delete_button")
east_port = 1
south_port = 2
delete_button = NodePath("delete_button")

[node name="delete_button" type="Button" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -21.0
offset_top = -5.0
offset_right = 3.0
offset_bottom = 20.0
grow_horizontal = 0
theme_type_variation = &"ExitButton"

[node name="out_top" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -7.0
offset_bottom = 6.0
grow_horizontal = 2
texture = ExtResource("3_tqxhs")
expand_mode = 1
stretch_mode = 5

[node name="out_bottom" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 70.0
offset_bottom = 83.0
grow_horizontal = 2
texture = ExtResource("4_ekvnf")
expand_mode = 1
stretch_mode = 5

[node name="out_right" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 72.0
offset_top = 17.0
offset_right = 5.0
offset_bottom = 60.0
grow_horizontal = 2
texture = ExtResource("5_yc0a2")
expand_mode = 1
stretch_mode = 5

[node name="out_left" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -5.0
offset_top = 17.0
offset_right = -72.0
offset_bottom = 60.0
grow_horizontal = 2
texture = ExtResource("6_7td3e")
expand_mode = 1
stretch_mode = 5

[node name="in_top" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -7.0
offset_bottom = 6.0
grow_horizontal = 2
texture = ExtResource("7_xbmrt")
expand_mode = 1
stretch_mode = 5

[node name="in_bottom" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 70.0
offset_bottom = 83.0
grow_horizontal = 2
texture = ExtResource("8_3fhu7")
expand_mode = 1
stretch_mode = 5

[node name="in_right" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 72.0
offset_top = 17.0
offset_right = 5.0
offset_bottom = 60.0
grow_horizontal = 2
texture = ExtResource("9_ej56k")
expand_mode = 1
stretch_mode = 5

[node name="in_left" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -5.0
offset_top = 17.0
offset_right = -72.0
offset_bottom = 60.0
grow_horizontal = 2
texture = ExtResource("10_c60qg")
expand_mode = 1
stretch_mode = 5

[node name="resource_icon_position" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = 8.0
offset_right = 13.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="resource_delete_button" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_top = 42.0
offset_right = -9.0
offset_bottom = 67.0
grow_horizontal = 0
scale = Vector2(0.628083, 0.628083)
theme_type_variation = &"ExitButton"

[connection signal="pressed" from="resource_delete_button" to="." method="_on_resource_delete_button_pressed"]
